[gd_scene load_steps=5 format=2]

[ext_resource path="res://Themes/dialog_flat_theme.tres" type="Theme" id=1]
[ext_resource path="res://UI/NewGame/new_game.gd" type="Script" id=2]
[ext_resource path="res://UI/NewGame/btn_class_group.tres" type="ButtonGroup" id=3]

[sub_resource type="Theme" id=1]

[node name="dlg_new_game" type="CanvasLayer"]
script = ExtResource( 2 )

[node name="new_game" type="Panel" parent="."]
margin_right = 276.0
margin_bottom = 321.0
theme = ExtResource( 1 )

[node name="margin_container" type="MarginContainer" parent="new_game"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 10
custom_constants/margin_top = 10
custom_constants/margin_left = 10
custom_constants/margin_bottom = 10

[node name="v_box_container" type="VBoxContainer" parent="new_game/margin_container"]
margin_left = 10.0
margin_top = 10.0
margin_right = 266.0
margin_bottom = 311.0

[node name="scroll_container" type="ScrollContainer" parent="new_game/margin_container/v_box_container"]
margin_right = 256.0
margin_bottom = 269.0
size_flags_vertical = 3

[node name="v_box_container" type="VBoxContainer" parent="new_game/margin_container/v_box_container/scroll_container"]
margin_right = 256.0
margin_bottom = 269.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 20

[node name="h_split_container" type="HSplitContainer" parent="new_game/margin_container/v_box_container/scroll_container/v_box_container"]
margin_right = 256.0
margin_bottom = 23.0
size_flags_horizontal = 3

[node name="player_name" type="Label" parent="new_game/margin_container/v_box_container/scroll_container/v_box_container/h_split_container"]
margin_right = 50.0
margin_bottom = 23.0
rect_min_size = Vector2( 50, 0 )
text = "角色名"

[node name="input_name" type="LineEdit" parent="new_game/margin_container/v_box_container/scroll_container/v_box_container/h_split_container"]
unique_name_in_owner = true
margin_left = 62.0
margin_right = 256.0
margin_bottom = 23.0
theme = SubResource( 1 )

[node name="h_split_container_2" type="HSplitContainer" parent="new_game/margin_container/v_box_container/scroll_container/v_box_container"]
margin_top = 43.0
margin_right = 256.0
margin_bottom = 71.0
size_flags_horizontal = 3

[node name="tag_class" type="Label" parent="new_game/margin_container/v_box_container/scroll_container/v_box_container/h_split_container_2"]
margin_top = 2.0
margin_right = 50.0
margin_bottom = 25.0
rect_min_size = Vector2( 50, 0 )
text = "职业"

[node name="h_box_container" type="HBoxContainer" parent="new_game/margin_container/v_box_container/scroll_container/v_box_container/h_split_container_2"]
margin_left = 62.0
margin_right = 256.0
margin_bottom = 28.0
custom_constants/separation = 5

[node name="Warrior" type="Button" parent="new_game/margin_container/v_box_container/scroll_container/v_box_container/h_split_container_2/h_box_container"]
margin_right = 42.0
margin_bottom = 28.0
focus_mode = 0
toggle_mode = true
enabled_focus_mode = 0
group = ExtResource( 3 )
text = "战士"

[node name="Wizard" type="Button" parent="new_game/margin_container/v_box_container/scroll_container/v_box_container/h_split_container_2/h_box_container"]
margin_left = 47.0
margin_right = 89.0
margin_bottom = 28.0
focus_mode = 0
toggle_mode = true
enabled_focus_mode = 0
group = ExtResource( 3 )
text = "法师"

[node name="Taos" type="Button" parent="new_game/margin_container/v_box_container/scroll_container/v_box_container/h_split_container_2/h_box_container"]
margin_left = 94.0
margin_right = 136.0
margin_bottom = 28.0
focus_mode = 0
toggle_mode = true
enabled_focus_mode = 0
group = ExtResource( 3 )
text = "道士"

[node name="class" type="Button" parent="new_game/margin_container/v_box_container/scroll_container/v_box_container/h_split_container_2/h_box_container"]
unique_name_in_owner = true
visible = false
margin_left = 141.0
margin_right = 153.0
margin_bottom = 28.0
focus_mode = 0
enabled_focus_mode = 0
group = ExtResource( 3 )

[node name="h_box_container" type="HBoxContainer" parent="new_game/margin_container/v_box_container"]
margin_left = 69.0
margin_top = 273.0
margin_right = 187.0
margin_bottom = 301.0
size_flags_horizontal = 4

[node name="create_player" type="Button" parent="new_game/margin_container/v_box_container/h_box_container"]
margin_right = 72.0
margin_bottom = 28.0
text = "创建角色"

[node name="cancel" type="Button" parent="new_game/margin_container/v_box_container/h_box_container"]
margin_left = 76.0
margin_right = 118.0
margin_bottom = 28.0
text = "放弃"

[connection signal="toggled" from="new_game/margin_container/v_box_container/scroll_container/v_box_container/h_split_container_2/h_box_container/Warrior" to="new_game" method="_on_set_class"]
[connection signal="toggled" from="new_game/margin_container/v_box_container/scroll_container/v_box_container/h_split_container_2/h_box_container/Wizard" to="new_game" method="_on_set_class"]
[connection signal="toggled" from="new_game/margin_container/v_box_container/scroll_container/v_box_container/h_split_container_2/h_box_container/Taos" to="new_game" method="_on_set_class"]
[connection signal="pressed" from="new_game/margin_container/v_box_container/h_box_container/create_player" to="." method="_on_create_player_pressed"]
[connection signal="pressed" from="new_game/margin_container/v_box_container/h_box_container/cancel" to="." method="_on_cancel_pressed"]
